--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div class="container">
     <img class="character2" src="p1.png" >
 </div></div> -->
+<div class="animaciones">
 <div class="animacion uno">
     <div class="container">
         <img class="character2" src="p1-min.png" >
@@ -53,11 +54,13 @@
     <div class="container-text text-four"><p>You can also subscribe, earn miles, get discounts, free seats, travel
         insurance, hotels and more.</p></div>
 </div>
-<!-- <div class="animacion cinco">
+<div class="animacion cinco">
     <div class="container">
         <img class="character7" src="p6.png" >
     </div>
-</div> -->
+</div>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="gsap.min.js"></script>
 <script
