--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
 <div class="container">
     <img class="character2" src="p1.png" >
 </div></div> -->
+
+<div class="ph1">
+    <div class="container">
+        <img src="img/ph1.png" alt="" srcset="" class="character1">
+    </div>
+    <div class="ph-text pht1">
+        <p>Download Fly Blue and plan your trip from your cell phone.</p>
+    </div>
+    
+</div>
+<div class="ph2">
+    
+    <div class="ph-text pht2">
+        <p>Choose the dates and access our fleet from anywhere in the world.</p>
+    </div>
+    <div class="container">
+        <img src="img/ph2.png" alt="" srcset="" class="character12">
+    </div>
+</div>
+
+
+
+<!-- 
 <div class="animaciones">
 <div class="animacion uno">
     <div class="container">
@@ -59,7 +82,7 @@
         <img class="character7" src="p6.png" >
     </div>
 </div>
-</div>
+</div> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="gsap.min.js"></script>
