--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 </div></div> -->
 
 <div class="ph1">
-    <div class="container">
+    <div class="ph1-img">
+    <div class="container primero">
         <img src="img/ph1.png" alt="" srcset="" class="character1">
     </div>
+</div>
     <div class="ph-text pht1">
         <p>Download Fly Blue and plan your trip from your cell phone.</p>
     </div>
@@ -40,9 +42,11 @@
     <div class="ph-text pht2">
         <p>Choose the dates and access our fleet from anywhere in the world.</p>
     </div>
-    <div class="container">
+    <div class="ph1-img">
+    <div class="container segundo">
         <img src="img/ph2.png" alt="" srcset="" class="character12">
     </div>
+</div>
 </div>
 
 
