--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </div></div> -->
 
 <div class="ph1">
+    <div class="bg">
+    </div>
+    <div class="ph-bg primergb"></div>
     <div class="ph1-img">
     <div class="container primero">
         <img src="img/ph1.png" alt="" srcset="" class="character1">
@@ -38,7 +41,7 @@
     
 </div>
 <div class="ph2">
-    
+    <div class="ph-bg segundobg"></div>
     <div class="ph-text pht2">
         <p>Choose the dates and access our fleet from anywhere in the world.</p>
     </div>
